--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.9"
+    "vue": "^3.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.2",
